# c_projects_word_finder

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
benchmarks/: benchmark.cpp
source/: fileFinder.c  fileFinder.h  main.c  namesVector.c  namesVector.h  occurenciesFinder.c  occurenciesFinder.h
tests/: CMakeLists.txt.in  filelist.txt  test.c  test.cpp  testText.txt
